<resources>
    <string name="app_name">TalkieMessage</string>
    <string name="user">Usuario</string>
    <string name="password">Senha</string>
    <string name="title_activity_admin_screen">AdminScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="welcome">Olá,</string>
    <string name="welcome_login">Bem-Vindo ao TalkieMessage</string>
    <string name="description_login">Envie ou receba mensagens</string>

    <string name="send">Enviar</string>
    <string name="enter">Entrar</string>
    <string name="confirmReading">Confirma leitura</string>
    <string name="register">Cadastro</string>
    <string name="name">Nome</string>
    <string name="sing_out">Sair</string>

    <string name="newMessage">Nova mensagem!</string>
    <string name="writemessage">Dígite sua mensagem aqui</string>
    <string name="notmessage">Você não tem mensagens para serem exibidas</string>
    <string name="userwrite">Usúario</string>
    <string name="email">E-mail</string>
    <string name="admin">"É administrador? "</string>
    <string name="invalid_email">E-mail Invalido!</string>
    <string name="invalid_password">Senha Invalida</string>

</resources>