<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.view.AdminScreen"
    android:orientation="vertical"
    android:background="@color/color_standard_background">

        <include
            android:id="@+id/main_toolbar"
            layout="@layout/toolbar_main" />

    <Button
        android:id="@+id/singin_btn_logoff"
        style="@style/Theme.TalkieMessage.SingOut"
        android:text="@string/sing_out"
        android:textColor="@color/white">

    </Button>

    <EditText
        android:id="@+id/write_text"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="36dp"
        android:hint="@string/writemessage"
        android:layout_marginEnd="36dp"
        android:background="@drawable/edit_text_background"
        android:autofillHints="true"
        tools:ignore="TextFields">

    </EditText>

    <EditText
        android:id="@+id/person_text_write"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/edit_text_background"
        android:inputType="textAutoComplete"
        android:hint="@string/userwrite"
        android:autofillHints="null">

    </EditText>

    <Button
        android:id="@+id/send_btn_person"
        style="@style/Theme.TalkieMessage.MessageButton"
        android:backgroundTint="@color/color_components"
        android:text="@string/send"
        android:textColor="@color/white">

    </Button>
</LinearLayout>