<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity"
    android:background="@color/color_standard_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_talkie_message"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/welcome_text">

    </ImageView>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/welcome_login">
    </TextView>

    <TextView
        android:id="@+id/description_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_login"
        android:layout_gravity="center"
        android:paddingBottom="25dp">

    </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_edit_name_input"
            style="@style/Theme.TalkieMessage.FormEditTextInput"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_name"
                style="@style/Theme.TalkieMessage.FormEditText"
                android:autofillHints="@null"
                android:hint="@string/name"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_edit_password_input"
            style="@style/Theme.TalkieMessage.FormEditTextInput"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_password"
                style="@style/Theme.TalkieMessage.FormEditText"
                android:autofillHints="@null"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn_enter"
            android:text="@string/enter"
            style="@style/Theme.TalkieMessage.MessageButton"
            android:enabled="true">

        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>