<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientScreen"
    android:orientation="vertical"
    android:background="@color/color_standard_background">

    <include
        android:id="@+id/main_toolbar"
        layout="@layout/toolbar_main" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
        app:layout_constraintVertical_bias="0.3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <Button
        android:id="@+id/singin_btn_logoff"
        style="@style/Theme.TalkieMessage.SingOut"
        android:text="@string/sing_out"
        android:textColor="@color/white">

    </Button>


    <TextView
        android:id="@+id/received_text"
        android:hint="@string/notmessage"
        style="@style/Theme.TalkieMessage.MessageTextView">

    </TextView>

    <Button

        style="@style/Theme.TalkieMessage.MessageButton"
        android:id="@+id/confirmed_text"
        android:text="@string/confirmReading">

    </Button>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>