<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity"
    android:orientation="vertical"
    android:background="@color/color_standard_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_edit_name_input"
            style="@style/Theme.TalkieMessage.FormEditTextInput"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_name"
                style="@style/Theme.TalkieMessage.FormEditText"
                android:autofillHints="@null"
                android:hint="@string/name"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_edit_email_input"
            style="@style/Theme.TalkieMessage.FormEditTextInput"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_email"
                style="@style/Theme.TalkieMessage.FormEditText"
                android:autofillHints="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_edit_password_input"
            style="@style/Theme.TalkieMessage.FormEditTextInput"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_password"
                style="@style/Theme.TalkieMessage.FormEditText"
                android:autofillHints="@null"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/isadmin_validation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edit_text_background"
            android:padding="16dp"
            android:text="@string/admin"
            tools:ignore="UseSwitchCompatOrMaterialXml">

        </Switch>

        <Button
            android:id="@+id/register_btn_enter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:backgroundTint="@color/color_components"
            android:text="@string/register">

        </Button>


    </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>