<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/email_message_messagesent_icon"
        app:layout_constraintBottom_toTopOf="@+id/linear_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

    </ImageView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/login_edit_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="16dp"
            android:hint="@string/user"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_background">

        </EditText>


        <EditText
            android:id="@+id/password_edit_input"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:hint="@string/password"
            android:layout_height="60dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="24dp"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_background">

        </EditText>

        <Button
            android:id="@+id/login_btn_enter"
            android:text="@string/enter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="36dp"
            android:backgroundTint="@color/blue_enabled"
            android:layout_marginEnd="36dp">

        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OU"
            android:gravity="center"
            android:layout_marginTop="16dp">

        </TextView>

        <TextView
            android:id="@+id/register_text_enter"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cadastre-se"
            android:gravity="center"
            android:textSize="20sp">

        </TextView>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>